--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  padding: 32px 20px;
+  padding: 48px 20px;
   font-family: "Georgia", "Times New Roman", serif;
   line-height: 1.6;
   color: #1a1a1a;
@@ -15,4 +15,30 @@ body {
 
 main {
   max-width: 720px;
+  margin: 0 auto;
+}
+
+h1,
+h2,
+h3 {
+  line-height: 1.2;
+  margin: 0 0 0.6em;
+}
+
+p {
+  margin: 0 0 1em;
+}
+
+a {
+  color: #0b5fff;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus {
+  text-decoration: underline;
+}
+
+ul {
+  padding-left: 1.1rem;
 }
