Add logo top right to return to main page

--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <a class="site-logo" href="/" aria-label="Go to home page">
+    <img src="/favicon.png" alt="Jan Ujcic logo" width="28" height="28" />
+  </a>
   <main>
     <p>Published: <i>{{ date | readableDate }}</i></p>
     {{ content | safe }}
